Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5863

Can't mount MGS due to label being less than 8 characters long.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.7.0
    • Lustre 2.7.0
    • 3
    • 16404

      The patch for LU-5383 fixed a out bound for ldd_svname. It test to see if ldd_svname is at least 8 characters in length but the function in lustre_disk.h server_make_name() sets ldd_svname for the mgs to MGS which is to short. This can prevent the MGS from mounting.

            jamesanunez James Nunez (Inactive)
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: