LU-5863 utils: Change ldd_svname for mgs to longer name

Change ldd_svname for mgs from "MGS" to "lustre-MGS" to
make it a valid name for parse_ldd.

Change-Id: I68582471e2b6ce47473a4fefb21e589c8c5b3730
Signed-off-by: James Simmons <uja.ornl@gmail.com>